# rustyfiles

./: Cargo.toml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: file_record.rs  mod.rs
src/routes/: delete_file.rs  download_file.rs  home_page.rs  mod.rs  upload_file.rs
static/: home_page.html
tests/: test123.txt
tests/web/: delete_file.rs  delete_files.rs  download_file.rs  download_files.rs  helpers.rs  home_page.rs  main.rs  upload_file.rs
