[package]
name = "rustyfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
chrono = "0.4.37"
config = { version = "0.14.0", features = ["yaml"] }
futures-util = "0.3.30"
mime_guess = "2.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
surrealdb = "1.3.1"
tera = "1.19.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] } 
tokio = "1.37.0"
